test/bad-anonymous-types.d.output
TsIdl Version 1.0
Copyright (C) Paul Vick. All rights reserved.

test/bad-anonymous-types.d.ts(0,12): error TS1013: Anonymous types that are not pure function types are not allowed.
