test/bad-anonymous-types.d.ts
declare var y: {a: number};
